# zero2prod

./: .gitignore  Procfile
backend/: Cargo.toml
backend/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
backend/tests/: signup.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/test/: App.test.jsx
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
