[package]
name = "zero2prod_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tower-http = { version = "0.5.2", features = ["cors"] }
dotenvy = "0.15.7"
http = "1.1.0"
supabase_rs = "0.4.13"
